changed to index

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ body, html {
 <!-- Header with image -->
 <header class="bgimg" id="home">
   <div class="display-middle">
-    <span class="white-text black-back" style="font-size:90px; background-color:black">The Cafe</span>
+    <span class="white-text black-back header-text">The Cafe</span>
   </div>
 </header>
 
